# sysrequirements

./: CMakeLists.txt  DxDiagWorker.cpp  DxDiagWorker.h  GameRequirementsWorker.cpp  GameRequirementsWorker.h  README.md  dxdiag_output.txt  dxtextmake.h  main.cpp  test.cpp
